<resources>
    <string name="app_name">E-commerce</string>

    <string name="splash_screen_logo_description">Imagem com uma coruja simbolizando o logo do aplicativo</string>

    <string name="main_activity_title">Listagem de Produtos</string>
    <string name="main_activity_fab_text">Novo Produto</string>
    <string name="main_menu_cart_text">Carrinho</string>
    <string name="main_menu_order_text">Pedidos</string>

    <string name="product_form_image_description">Local onde a imagem irá ser exibida</string>
    <string name="product_form_description_hint">Descrição</string>
    <string name="product_form_value_hint">Valor</string>
    <string name="product_form_name_hint">Nome</string>
    <string name="product_form_image_hint">Link da Imagem</string>
    <string name="product_form_search_image_button">Botão para buscar a imagem</string>
    <string name="product_form_title">Formulário de Produtos</string>
    <string name="product_form_menu_save_text">salvar</string>
    <string name="product_form_menu_url_error">Url não pode ser vazia</string>
    <string name="product_form_menu_name_error">Nome não pode ser vazio</string>
    <string name="product_form_menu_value_error">Valor não pode ser vazio</string>

    <string name="product_detail_description_title">Descrição do Produto</string>
    <string name="product_detail_value_title">Valor unitário</string>
    <string name="product_detail_button_text">Adicionar no carrinho</string>
    <string name="product_detail_menu_edit_text">Editar</string>
    <string name="product_detail_add_cart_success">Produto adicionado ao Carrinho</string>

    <string name="cart_title">Carrinho</string>
    <string name="cart_total_text">Valor total: R$ %1$.2f</string>

    <string name="product_value">R$ %1$.2f</string>
    <string name="cart_menu_finish_text">Finalizar</string>

    <string name="order_title">Pedidos</string>
    <string name="order_item_title">Pedido #%1$o</string>
    <string name="order_value_title">Valor total: </string>
    <string name="title_activity_bla">Bla</string>
</resources>